[gd_scene load_steps=11 format=2]

[ext_resource path="res:///UI/LevelMenu/LevelMenu.gd" type="Script" id=1]
[ext_resource path="res:///Common/OdibeeSans-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res:///UI/Transition/Transition.tscn" type="PackedScene" id=3]
[ext_resource path="res:///UI/LevelMenu/earth.png" type="Texture" id=4]
[ext_resource path="res:///Common/SpaceBackGround.jpeg" type="Texture" id=5]
[ext_resource path="res:///UI/LevelMenu/moon.png" type="Texture" id=6]
[ext_resource path="res:///UI/LevelMenu/mars.png" type="Texture" id=7]
[ext_resource path="res:///UI/LevelMenu/Text.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
resource_name = "float"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 506.398, 134.84 ), Vector2( 506.398, 180 ), Vector2( 506.398, 134.84 ) ]
}

[node name="LevelMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 533.906, 320.344 )
scale = Vector2( 0.235921, 0.141004 )
texture = ExtResource( 5 )

[node name="TransitonColor" parent="." instance=ExtResource( 3 )]
margin_top = -0.707092
margin_bottom = -0.707092

[node name="LevelZeroButton" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 54.7451
margin_top = -18.1716
margin_right = 191.745
margin_bottom = 23.8284
custom_fonts/font = SubResource( 1 )
text = "Level Zero: Sun"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelOneButton" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 300.818
margin_top = -21.7072
margin_right = 437.818
margin_bottom = 20.2928
custom_fonts/font = SubResource( 1 )
disabled = true
text = "Level One: Earth"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelTwoButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 39.1727
margin_top = -19.5858
margin_right = 194.173
margin_bottom = 22.4142
custom_fonts/font = SubResource( 1 )
disabled = true
text = "Level Two: Moon"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelThreeButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -204.222
margin_top = -18.8787
margin_right = -49.7955
margin_bottom = 23.1213
custom_fonts/font = SubResource( 1 )
disabled = true
text = "Level Three: Mars"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EarthLevel" type="Sprite" parent="."]
position = Vector2( 361.132, 438.699 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 4 )

[node name="MoonLevel" type="Sprite" parent="."]
position = Vector2( 619.031, 438.962 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 6 )

[node name="MarsLevel" type="Sprite" parent="."]
position = Vector2( 885.72, 437.444 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "float"
anims/float = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="AnimationPlayer"]
position = Vector2( 505.691, 75.6831 )
texture = ExtResource( 8 )

[connection signal="pressed" from="LevelZeroButton" to="." method="_on_LevelZeroButton_pressed"]
[connection signal="pressed" from="LevelOneButton" to="." method="_on_LevelOneButton_pressed"]
[connection signal="pressed" from="LevelTwoButton" to="." method="_on_LevelTwoButton_pressed"]
[connection signal="pressed" from="LevelThreeButton" to="." method="_on_LevelThreeButton_pressed"]
